--- a/README.Rmd
+++ b/README.Rmd
@@ -39,23 +39,29 @@ library(ggplot2)
 
 The package salmix provides a suite of curve fitting to describe data that may be generated from a process when distributions in time might be concentrated (from fisheries, this occurs with counts over time of salmon returning from the ocean to spawn or juvenile fish emigrating from streams to the ocean). 
 
-In a given year, the curve might be described by a symmetric or asymmetric Gaussian or Student-t distribution (shown here in log-scale on the y-axis). Questions of interest might be
-- are the means (x-axis) shifting through time?
-- are the variances shifting through time?
-- does the model support a symmetric or asymmetric distribution?
-
 ```{r echo=FALSE}
 set.seed(123)
 df = expand.grid(year = 1:10, doy=100:250)
-mus = rnorm(10, 175, 20)
+mus = rnorm(10, 175, 10)
 thetas = runif(10, 5, 8)
-sigmas = rnorm(10, 7, 5)
+sigmas = runif(10, 7, 10)
 df$y = dnorm(df$doy, mus[df$year], sigmas[df$year], log=TRUE) + thetas[df$year]
 df$year = as.factor(df$year)
 ```
 
 ```{r}
-ggplot(df, aes(doy,y,col=year,group=year)) + geom_line()
+ggplot(dplyr::filter(df,year==1), aes(doy,exp(y))) + 
+  geom_line() + xlab("Calendar day") + ylab("Count")
+```
+
+In a given year, the curve might be described by a symmetric or asymmetric Gaussian or Student-t distribution (shown here in log-scale on the y-axis). Questions of interest might be
+- are the means (x-axis) shifting through time?
+- are the variances shifting through time?
+- does the model support a symmetric or asymmetric distribution?
+
+```{r}
+ggplot(df, aes(doy,exp(y),col=year,group=year)) + 
+  geom_line() + xlab("Calendar day") + ylab("Count")
 ```
 
 ## Examples
