--- a/README.Rmd
+++ b/README.Rmd
@@ -47,11 +47,13 @@ thetas = runif(10, 5, 8)
 sigmas = runif(10, 7, 10)
 df$y = dnorm(df$doy, mus[df$year], sigmas[df$year], log=TRUE) + thetas[df$year]
 df$year = as.factor(df$year)
+df$data = rnorm(nrow(df), df$y, 0.2)
 ```
 
-```{r}
+```{r fig.cap="Predicted (black line) and observed counts (red dots) for hypothetical dataset. Multiple observations may exist for some days, or no observations on others."}
 ggplot(dplyr::filter(df,year==1), aes(doy,exp(y))) + 
-  geom_line() + xlab("Calendar day") + ylab("Count")
+  geom_line() + xlab("Calendar day") + ylab("Count") + 
+  geom_point(aes(doy,exp(data)),col="red")
 ```
 
 In a given year, the curve might be described by a symmetric or asymmetric Gaussian or Student-t distribution (shown here in log-scale on the y-axis). Questions of interest might be
