change logic slightly

--- a/vignettes/examples.Rmd
+++ b/vignettes/examples.Rmd
@@ -40,7 +40,7 @@ datalist = create_data(fishdist,
   variable = "number", 
   time="year", 
   date = "doy",
-  asymmetric_model = FALSE, 
+  asymmetric_model = TRUE, 
   est_sigma_trend = TRUE, 
   est_mu_trend = TRUE, 
   est_t_model = FALSE, 
