--- a/vignettes/examples.Rmd
+++ b/vignettes/examples.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 library(salmix)
 library(dplyr)
 library(TMB)
-set.seed(1)
+set.seed(123)
 ```
 
 We'll start by loading the example dataset, based on run timing data for Pacific salmon.
@@ -43,7 +43,7 @@ datalist = create_data(fishdist,
   asymmetric_model = TRUE, 
   est_sigma_trend = TRUE, 
   est_mu_trend = TRUE, 
-  est_t_model = FALSE, 
+  tail_model = "gaussian", 
   family = "gaussian")
 ```
 
@@ -97,7 +97,7 @@ datalist = create_data(fishdist,
   time="year", 
   date = "doy",
   asymmetric_model = TRUE, 
-  est_t_model = TRUE)
+  tail_model = "student_t")
 fitted_t = fit(datalist)
 ```
 
