--- a/README.Rmd
+++ b/README.Rmd
@@ -18,9 +18,8 @@ knitr::opts_chunk$set(
 # salmix
 R package for fitting distributions to run timing data via maximum likelihood
 
-<!-- badges: start -->
-  [![R-CMD-check](https://github.com/ericward-noaa/salmix/workflows/R-CMD-check/badge.svg)](https://github.com/ericward-noaa/salmix/actions)
-<!-- badges: end -->
+[![R build status](https://github.com/ericward-noaa/salmix/workflows/R-CMD-check/badge.svg)](https://github.com/ericward-noaa/salmix/actions)
+
 
 ## Installation
 
