--- a/README.Rmd
+++ b/README.Rmd
@@ -54,7 +54,7 @@ df$data = rnorm(nrow(df), df$y, 0.2)
 ```{r fig.cap="Predicted (black line) and observed counts (red dots) for hypothetical dataset. Multiple observations may exist for some days, or no observations on others.",  echo=FALSE}
 ggplot(dplyr::filter(df,year==1), aes(doy,exp(y))) + 
   geom_line() + xlab("Calendar day") + ylab("Count") + 
-  geom_point(aes(doy,exp(data)),col="red")
+  geom_point(aes(doy,exp(data)),col="red") + theme_bw()
 ```
 
 In a given year, the curve might be described by a symmetric or asymmetric Gaussian or Student-t distribution (shown here in log-scale on the y-axis). Questions of interest might be
@@ -64,7 +64,7 @@ In a given year, the curve might be described by a symmetric or asymmetric Gauss
 
 ```{r echo=FALSE}
 ggplot(df, aes(doy,exp(y),col=year,group=year)) + 
-  geom_line() + xlab("Calendar day") + ylab("Count")
+  geom_line() + xlab("Calendar day") + ylab("Count") + theme_bw()
 ```
 
 ## Examples
