--- a/README.Rmd
+++ b/README.Rmd
@@ -70,3 +70,15 @@ ggplot(df, aes(doy,exp(y),col=year,group=year)) +
 ## Examples
 
 The main functions are `create_data()` and `fit()`. See `?create_data` and `?fit` for additional details and examples. A vignette includes additional detail, and examples of several models as well as function arguments available [here](https://github.com/ericward-noaa/salmix/tree/master/vignettes).
+
+## NOAA Disclaimer
+
+This repository is a scientific product and is not official communication of the National Oceanic and
+Atmospheric Administration, or the United States Department of Commerce. All NOAA GitHub project code is
+provided on an ‘as is’ basis and the user assumes responsibility for its use. Any claims against the Department of
+Commerce or Department of Commerce bureaus stemming from the use of this GitHub project will be governed
+by all applicable Federal law. Any reference to specific commercial products, processes, or services by service
+mark, trademark, manufacturer, or otherwise, does not constitute or imply their endorsement, recommendation or
+favoring by the Department of Commerce. The Department of Commerce seal and logo, or the seal and logo of a
+DOC bureau, shall not be used in any manner to imply endorsement of any commercial product or activity by
+DOC or the United States Government.
