--- a/README.Rmd
+++ b/README.Rmd
@@ -20,6 +20,7 @@ R package for fitting distributions to run timing data via maximum likelihood
 [![R build status](https://github.com/ericward-noaa/phenomix/workflows/R-CMD-check/badge.svg)](https://github.com/ericward-noaa/phenomix/actions)
 
 pkgdown site: [https://ericward-noaa.github.io/phenomix/](https://ericward-noaa.github.io/phenomix/)
+
 ## Installation
 
 You can install phenomix with:
@@ -33,7 +34,6 @@ Load libraries
 library(phenomix)
 library(ggplot2)
 ```
-
 
 ## Functions
 
@@ -69,6 +69,19 @@ ggplot(df, aes(doy,exp(y),col=year,group=year)) +
 ## Examples
 
 The main functions are `create_data()` and `fit()`. See `?create_data` and `?fit` for additional details and examples. A vignette includes additional detail, and examples of several models as well as function arguments available [https://ericward-noaa.github.io/phenomix/](https://ericward-noaa.github.io/phenomix/).
+
+## References
+
+
+For description of fisheries applications of asymmetric models:
+
+Methot, R.D. 2000. Technical description of the stock synthesis assessment program. U.S. Dept. Commer., NOAA Tech. Memo. NMFS-NWFSC-43, 46 p. [link](https://repository.library.noaa.gov/view/noaa/3172/noaa_3172_DS1.pdf)
+
+For statistical background of asymmetric models:
+
+Rubio, F.J. and Steel, M.F.J. 2020. The family of two-piece distributions. Significance, 17(1) 120--13. [link](https://rss.onlinelibrary.wiley.com/doi/full/10.1111/j.1740-9713.2020.01352.x)
+
+Wallis, K.F. 2014. The two-piece normal, binormal, or double Gaussian distribution: Its origin and rediscoveries. Statistical Science, 29(1), 106--112. [link](https://arxiv.org/abs/1405.4995)
 
 ## NOAA Disclaimer
 
