--- a/README.Rmd
+++ b/README.Rmd
@@ -17,16 +17,16 @@ knitr::opts_chunk$set(
 # phenomix
 R package for fitting distributions to run timing data via maximum likelihood
 
-[![R build status](https://github.com/ericward-noaa/phenomix/workflows/R-CMD-check/badge.svg)](https://github.com/ericward-noaa/phenomix/actions)
+[![R build status](https://github.com/noaa-nwfsc/phenomix/workflows/R-CMD-check/badge.svg)](https://github.com/noaa-nwfsc/phenomix/actions)
 
-pkgdown site: [https://ericward-noaa.github.io/phenomix/](https://ericward-noaa.github.io/phenomix/)
+pkgdown site: [https://noaa-nwfsc.github.io/phenomix/](https://noaa-nwfsc.github.io/phenomix/)
 
 ## Installation
 
 You can install phenomix with:
 
 ```{r, eval=TRUE}
-remotes::install_github("ericward-noaa/phenomix",build_vignettes = TRUE)
+remotes::install_github("noaa-nwfsc/phenomix",build_vignettes = TRUE)
 ```
 
 Load libraries
@@ -68,7 +68,7 @@ ggplot(df, aes(doy,exp(y),col=year,group=year)) +
 
 ## Examples
 
-The main functions are `create_data()` and `fit()`. See `?create_data` and `?fit` for additional details and examples. A vignette includes additional detail, and examples of several models as well as function arguments available [https://ericward-noaa.github.io/phenomix/](https://ericward-noaa.github.io/phenomix/).
+The main functions are `create_data()` and `fit()`. See `?create_data` and `?fit` for additional details and examples. A vignette includes additional detail, and examples of several models as well as function arguments available [https://noaa-nwfsc.github.io/phenomix/](https://noaa-nwfsc.github.io/phenomix/).
 
 ## References
 
