--- a/README.Rmd
+++ b/README.Rmd
@@ -17,9 +17,9 @@ knitr::opts_chunk$set(
 # phenomix
 R package for fitting distributions to run timing data via maximum likelihood
 
-[![R build status](https://github.com/noaa-nwfsc/phenomix/workflows/R-CMD-check/badge.svg)](https://github.com/noaa-nwfsc/phenomix/actions)
+[![R build status](https://github.com/nwfsc-cb/phenomix/workflows/R-CMD-check/badge.svg)](https://github.com/nwfsc-cb/phenomix/actions)
 
-pkgdown site: [https://noaa-nwfsc.github.io/phenomix/](https://noaa-nwfsc.github.io/phenomix/)
+pkgdown site: [https://nwfsc-cb.github.io/phenomix/](https://nwfsc-cb.github.io/phenomix/)
 
 ### DOI
 
@@ -30,7 +30,7 @@ The DOI for this repository is [![DOI](https://zenodo.org/badge/243336401.svg)](
 You can install phenomix with:
 
 ```{r, eval=TRUE}
-remotes::install_github("noaa-nwfsc/phenomix",build_vignettes = TRUE)
+remotes::install_github("nwfsc-cb/phenomix",build_vignettes = TRUE)
 ```
 
 Load libraries
@@ -72,7 +72,7 @@ ggplot(df, aes(doy,exp(y),col=year,group=year)) +
 
 ## Examples
 
-The main functions are `create_data()` and `fit()`. See `?create_data` and `?fit` for additional details and examples. A vignette includes additional detail, and examples of several models as well as function arguments available [https://noaa-nwfsc.github.io/phenomix/](https://noaa-nwfsc.github.io/phenomix/).
+The main functions are `create_data()` and `fit()`. See `?create_data` and `?fit` for additional details and examples. A vignette includes additional detail, and examples of several models as well as function arguments available [https://nwfsc-cb.github.io/phenomix/](https://nwfsc-cb.github.io/phenomix/).
 
 ## References
 
