--- a/README.Rmd
+++ b/README.Rmd
@@ -30,7 +30,7 @@ The DOI for this repository is [![DOI](https://zenodo.org/badge/243336401.svg)](
 You can install phenomix with:
 
 ```{r, eval=TRUE}
-remotes::install_github("nwfsc-cb/phenomix",build_vignettes = TRUE)
+remotes::install_github("nwfsc-cb/phenomix", build_vignettes = TRUE)
 ```
 
 Load libraries
@@ -45,19 +45,22 @@ The package pheomix provides a suite of curve fitting to describe data that may 
 
 ```{r echo=FALSE}
 set.seed(123)
-df = expand.grid(year = 1:10, doy=100:250)
-mus = rnorm(10, 175, 10)
-thetas = runif(10, 5, 8)
-sigmas = runif(10, 7, 10)
-df$y = dnorm(df$doy, mus[df$year], sigmas[df$year], log=TRUE) + thetas[df$year]
-df$year = as.factor(df$year)
-df$data = rnorm(nrow(df), df$y, 0.2)
+df <- expand.grid(year = 1:10, doy = 100:250)
+mus <- rnorm(10, 175, 10)
+thetas <- runif(10, 5, 8)
+sigmas <- runif(10, 7, 10)
+df$y <- dnorm(df$doy, mus[df$year], sigmas[df$year], log = TRUE) + thetas[df$year]
+df$year <- as.factor(df$year)
+df$data <- rnorm(nrow(df), df$y, 0.2)
 ```
 
 ```{r fig.cap="Predicted (black line) and observed counts (red dots) for hypothetical dataset. Multiple observations may exist for some days, or no observations on others.",  echo=FALSE}
-ggplot(dplyr::filter(df,year==1), aes(doy,exp(y))) + 
-  geom_line() + xlab("Calendar day") + ylab("Count") + 
-  geom_point(aes(doy,exp(data)),col="red") + theme_bw()
+ggplot(dplyr::filter(df, year == 1), aes(doy, exp(y))) +
+  geom_line() +
+  xlab("Calendar day") +
+  ylab("Count") +
+  geom_point(aes(doy, exp(data)), col = "red") +
+  theme_bw()
 ```
 
 In a given year, the curve might be described by a symmetric or asymmetric Gaussian or Student-t distribution (shown here in log-scale on the y-axis). Questions of interest might be
@@ -66,8 +69,11 @@ In a given year, the curve might be described by a symmetric or asymmetric Gauss
 - does the model support a symmetric or asymmetric distribution?
 
 ```{r echo=FALSE}
-ggplot(df, aes(doy,exp(y),col=year,group=year)) + 
-  geom_line() + xlab("Calendar day") + ylab("Count") + theme_bw()
+ggplot(df, aes(doy, exp(y), col = year, group = year)) +
+  geom_line() +
+  xlab("Calendar day") +
+  ylab("Count") +
+  theme_bw()
 ```
 
 ## Examples
