--- a/vignettes/a1_examples.Rmd
+++ b/vignettes/a1_examples.Rmd
@@ -21,7 +21,6 @@ knitr::opts_chunk$set(
 library(ggplot2)
 library(phenomix)
 library(dplyr)
-library(TMB)
 ```
 
 ## Overview
@@ -30,13 +29,14 @@ The `phenomix` R package is designed to be a robust and flexible tool for modeli
 
 ```{r message=FALSE, warning=FALSE, results='hide'}
 set.seed(123)
-df = data.frame(x = seq(110,150,1))
-df$y = dnorm(df$x, mean = 130, 10) * 10000
-df$obs = rnorm(nrow(df), df$y, 30)
-ggplot(df, aes(x, obs)) + geom_point() + 
-  geom_smooth() + 
-  theme_bw() + 
-  xlab("Day of year") + 
+df <- data.frame(x = seq(110, 150, 1))
+df$y <- dnorm(df$x, mean = 130, 10) * 10000
+df$obs <- rnorm(nrow(df), df$y, 30)
+ggplot(df, aes(x, obs)) +
+  geom_point() +
+  geom_smooth() +
+  theme_bw() +
+  xlab("Day of year") +
   ylab("Observation")
 ```
 
@@ -59,25 +59,26 @@ We'll start with the default arguments for the function, before going into detai
 First, if we're fitting a model with covariates affecting the mean and standard deviation of the phenological response, we need to create a data frame indexed by time step.  
 
 ```{r}
-cov_dat = data.frame(nyear = unique(fishdist$year))
+cov_dat <- data.frame(nyear = unique(fishdist$year))
 # rescale year -- could also standardize with scale()
-cov_dat$nyear = cov_dat$nyear - min(cov_dat$nyear) 
+cov_dat$nyear <- cov_dat$nyear - min(cov_dat$nyear)
 ```
 
 
 ```{r}
-datalist = create_data(fishdist, 
-  min_number=0, 
-  variable = "number", 
-  time="year", 
+datalist <- create_data(fishdist,
+  min_number = 0,
+  variable = "number",
+  time = "year",
   date = "doy",
-  asymmetric_model = FALSE, 
-  mu = ~ nyear,
-  sigma = ~ nyear,
+  asymmetric_model = FALSE,
+  mu = ~nyear,
+  sigma = ~nyear,
   covar_data = cov_dat,
   est_sigma_re = TRUE,
   est_mu_re = TRUE,
-  tail_model = "gaussian")
+  tail_model = "gaussian"
+)
 ```
 
 The `min_number` argument represents an optional threshold below which data is ignored. The `variable` argument is a character identifying the name of the response variable in the data frame. Similarly, the `time` and `date` arguments specify the labels of the temporal (e.g. year) and seasonal variables (day of year).
@@ -95,7 +96,7 @@ Next, we'll use the `fit` function to do maximum likelihood estimation in TMB. A
 
 ```{r message=FALSE, warning=FALSE, results='hide'}
 set.seed(1)
-fitted = fit(datalist)
+fitted <- fit(datalist)
 ```
 
 We don't get any warnings out of the estimation, but let's look at the sdreport in more detail. `fitted` is of the `phenomix` class and contains the following
@@ -112,8 +113,10 @@ fitted$pars$convergence
 This looks like things are converging. But sometimes relative convergence (code = 4) won't throw warnings. We can also look at the variance estimates, which also are estimated (a good sign things are converged!). These are all included in the `sdreport` -- the parameters and their standard errors are accessible with
 
 ```{r}
-sdrep_df = data.frame("par"=names(fitted$sdreport$value),
-  "value"=fitted$sdreport$value, "sd"=fitted$sdreport$sd)
+sdrep_df <- data.frame(
+  "par" = names(fitted$sdreport$value),
+  "value" = fitted$sdreport$value, "sd" = fitted$sdreport$sd
+)
 head(sdrep_df)
 ```
 
@@ -142,7 +145,7 @@ pars(fitted)
 Predicted values can be returned with a call to `predict`. The `se.fit` argument is optional, 
 
 ```{r eval=FALSE}
-predict(fitted, se.fit=TRUE)
+predict(fitted, se.fit = TRUE)
 ```
 
 ### Plotting results
@@ -150,7 +153,7 @@ predict(fitted, se.fit=TRUE)
 Using our fitted object, there are some basic plotting functions included for diagnostics. Let's plot run timing over time, by year:
 
 ```{r, fig.cap="Fitted symmetric model with tails from a  Gaussian distribution", fig.width = 8}
-g = plot_diagnostics(fitted, type="timing", logspace=TRUE)
+g <- plot_diagnostics(fitted, type = "timing", logspace = TRUE)
 g
 ```
 
@@ -162,20 +165,21 @@ First, we can try to fit the same model, but using an asymmetric t-distribution.
 ```{r message=FALSE, warning=FALSE, results='hide'}
 set.seed(2)
 
-datalist = create_data(fishdist, 
-  min_number=0, 
-  variable = "number", 
-  time="year", 
+datalist <- create_data(fishdist,
+  min_number = 0,
+  variable = "number",
+  time = "year",
   date = "doy",
-  asymmetric_model = FALSE, 
-  mu = ~ nyear,
-  sigma = ~ nyear,
+  asymmetric_model = FALSE,
+  mu = ~nyear,
+  sigma = ~nyear,
   covar_data = cov_dat,
   est_sigma_re = TRUE,
   est_mu_re = TRUE,
-  tail_model = "student_t")
+  tail_model = "student_t"
+)
 
-fitted_t = fit(datalist)
+fitted_t <- fit(datalist)
 ```
 
 ```{r, fig.cap="Fitted asymmetric model with heavy tails from a t-distribution", fig.width = 8}
@@ -185,10 +189,10 @@ plot_diagnostics(fitted_t)
 We can also compare the two models using AIC. Note we're not comparing random effects structures (where we'd need REML), and that this is an approximation (because only fixed effects parameters are included). This comparison shows that maybe not surprisingly, the Student-t model is more parsimoinious than the Gaussian tailed model (aic_2 < aic_1).
 
 ```{r}
-aic_1 = extractAIC(fitted)$AIC
+aic_1 <- extractAIC(fitted)$AIC
 aic_1
 
-aic_2 = extractAIC(fitted_t)$AIC
+aic_2 <- extractAIC(fitted_t)$AIC
 aic_2
 ```
 
@@ -197,14 +201,15 @@ Second, we can we can try to fit the same model, but using a generalized normal 
 ```{r message=FALSE, warning=FALSE, results='hide', eval=FALSE}
 set.seed(5)
 
-datalist = create_data(fishdist, 
-  min_number=0, 
-  variable = "number", 
-  time="year", 
+datalist <- create_data(fishdist,
+  min_number = 0,
+  variable = "number",
+  time = "year",
   date = "doy",
-  asymmetric_model = FALSE, 
-  tail_model = "gnorm")
-fitted = fit(datalist, limits = TRUE)
+  asymmetric_model = FALSE,
+  tail_model = "gnorm"
+)
+fitted <- fit(datalist, limits = TRUE)
 ```
 
 ### Diagnosing lack of convergence
@@ -214,7 +219,9 @@ In addition to the warning message about the Hessian not being positive definite
 Fixes to improve convergence may be to start from a different set of starting values (try passing `inits` into the `fit` function), or placing stricter bounds on convergence statistics. Or it may be that the model isn't a good fit to the data. Specifically, the convergence criterion can be modified with the `control` argument -- which is passed into `stats::nlminb`. One parameter in this list that can be changed is `rel.tol`, e.g.
 
 ```{r eval=FALSE}
-fit = fitted(..., control=list(rel.tol = 1.0e-12, 
-  eval.max=4000, iter.max=4000))
+fit <- fitted(..., control = list(
+  rel.tol = 1.0e-12,
+  eval.max = 4000, iter.max = 4000
+))
 ```
 
